--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
    <p style="font-family: 'Determination Mono'; font-size: 64px;">We were prophesized to meet here</p>
    <nav>
     <ul>
-      <li style="text-align: center; font-size: 32px;"><a href="./public/Q1_1stGraded.html"> The Prophecy </a> </li>
+      <li style="text-align: center; font-size: 32px;"><a href="public/Q1_1stGraded.html"> The Prophecy </a> </li>
     </ul>
    </nav>
   </section>
-  <li style="text-align: center; font-size: 30px;"><a href="./public/Q11stNGPotassiumEspiritu.html"> Is thoust a big back?</a>
+  <li style="text-align: center; font-size: 30px;"><a href="public/Q11stNGPotassiumEspiritu.html"> Is thoust a big back?</a>
    </li>
-   <li style="text-align: center; font-size: 30px;"><a href="./public/Q13GPotassiumEspiritu.html"> Random Number Generator </a></li>
+   <li style="text-align: center; font-size: 30px;"><a href="public/Q13GPotassiumEspiritu.html"> Random Number Generator </a></li>
    
 </body>
 </html>
