--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   </section>
   <li style="text-align: center; font-size: 30px;"><a href="public/Q11stNGPotassiumEspiritu.html"> Is thoust a big back?</a>
    </li>
+
+   <li style="text-align: center; font-size: 30px;"><a href="public/Q12GPotassiumEspiritu.html"> Budgetor 2000</a></li>
+
    <li style="text-align: center; font-size: 30px;"><a href="public/Q13GPotassiumEspiritu.html"> Random Number Generator </a></li>
    
 </body>
