--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    <li style="text-align: center; font-size: 30px;"><a href="public/Q12GPotassiumEspiritu.html"> Budgetor 2000</a></li>
 
    <li style="text-align: center; font-size: 30px;"><a href="public/Q13GPotassiumEspiritu.html"> Random Number Generator </a></li>
-   
+
+   <li style="text-align: center; font-size: 30px;"><a href="public/Practice4.html"> Practice 4 </a></li>
 </body>
 </html>
